config_tools rifinito

--- a/src/ui/config_tools.ui
+++ b/src/ui/config_tools.ui
@@ -68,12 +68,12 @@
     <string>&amp;Save</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>31</y>
-     <width>333</width>
+     <width>621</width>
      <height>199</height>
     </rect>
    </property>
