--- a/src/ui/resources.qrc
+++ b/src/ui/resources.qrc
@@ -2,10 +2,9 @@
   <qresource prefix="pengui">
     <file>icons/produce.svg</file>
     <file>icons/dad.svg</file>
-    <file>icons/egg.svg</file>
-    <file>icons/eggs.png</file>
     <file>icons/kill.svg</file>
     <file>icons/krill.svg</file>
     <file>icons/pengui.svg</file>
   </qresource>
+  <qresource prefix="newPrefix"/>
 </RCC>
