--- a/src/ui/text_editor.ui
+++ b/src/ui/text_editor.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>1600</width>
+    <height>1200</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1600</width>
+    <height>1200</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -16,10 +28,10 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>440</y>
-     <width>621</width>
-     <height>32</height>
+     <x>0</x>
+     <y>1100</y>
+     <width>1600</width>
+     <height>100</height>
     </rect>
    </property>
    <property name="orientation">
@@ -32,10 +44,10 @@
   <widget class="QPlainTextEdit" name="plainTextEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>621</width>
-     <height>401</height>
+     <x>100</x>
+     <y>0</y>
+     <width>1600</width>
+     <height>1000</height>
     </rect>
    </property>
   </widget>
