--- a/src/ui/produce.ui
+++ b/src/ui/produce.ui
@@ -16,12 +16,6 @@
     <height>480</height>
    </size>
   </property>
-  <property name="maximumSize">
-   <size>
-    <width>640</width>
-    <height>480</height>
-   </size>
-  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -48,39 +42,26 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>360</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Command to run</string>
-   </property>
-   <property name="text">
-    <string>Command</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="lineEditCommand">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>360</y>
-     <width>521</width>
-     <height>23</height>
+     <x>20</x>
+     <y>320</y>
+     <width>611</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="toolTip">
+    <string>generated command to produce ISO</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonRun">
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>390</y>
+     <y>360</y>
      <width>151</width>
-     <height>71</height>
+     <height>101</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -94,9 +75,9 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>390</y>
+     <y>360</y>
      <width>131</width>
-     <height>71</height>
+     <height>101</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -110,9 +91,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
+     <y>360</y>
      <width>141</width>
-     <height>71</height>
+     <height>101</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -122,166 +103,231 @@
     <string>&amp;Help</string>
    </property>
   </widget>
+  <widget class="QLabel" name="labelTheme">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>206</y>
+     <width>73</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Select the desired theme. To download themes: eggs wardrobe get</string>
+   </property>
+   <property name="text">
+    <string>Theme</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelFilters">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>128</y>
+     <width>63</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Filters are used to remove private or unnecessaries informations from the image, note exclude.list.template is always applied</string>
+   </property>
+   <property name="text">
+    <string>Filters</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditPrefix">
+   <property name="geometry">
+    <rect>
+     <x>164</x>
+     <y>50</y>
+     <width>451</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>prefix</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxAddons">
+   <property name="geometry">
+    <rect>
+     <x>164</x>
+     <y>11</y>
+     <width>461</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Select addons to insert</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelCompression">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>167</y>
+     <width>137</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>You can choose from three types of compression: fast (default), standart and max</string>
+   </property>
+   <property name="text">
+    <string>Compression</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxCompression">
+   <property name="geometry">
+    <rect>
+     <x>164</x>
+     <y>167</y>
+     <width>461</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Select compression</string>
+   </property>
+  </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>11</x>
-     <y>22</y>
-     <width>611</width>
-     <height>314</height>
+     <x>0</x>
+     <y>0</y>
+     <width>271</width>
+     <height>33</height>
     </rect>
    </property>
-   <layout class="QFormLayout" name="formLayout">
+   <layout class="QGridLayout" name="gridLayout"/>
+  </widget>
+  <widget class="QCheckBox" name="checkBoxBasename">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>89</y>
+     <width>136</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Basename (usually hostname)</string>
+   </property>
+   <property name="text">
+    <string>Basename</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBoxPrefix">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>50</y>
+     <width>84</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Prefix eg: egg-of_DISTRONAME-CODENAME-</string>
+   </property>
+   <property name="text">
+    <string>Prefix</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxTheme">
+   <property name="geometry">
+    <rect>
+     <x>164</x>
+     <y>206</y>
+     <width>461</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Select theme</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditBasename">
+   <property name="geometry">
+    <rect>
+     <x>164</x>
+     <y>89</y>
+     <width>210</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>basename</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelAddons">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>269</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>configures the addon and creates a link to the selected one on the desktop</string>
+   </property>
+   <property name="text">
+    <string>Addons</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>120</y>
+     <width>271</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
-     <widget class="QLabel" name="labelAddons">
+     <widget class="QCheckBox" name="checkBoxCustom">
       <property name="toolTip">
-       <string>configures the addon and creates a link to the selected one on the desktop</string>
+       <string>Add exclude.list.custom to the /etc/penguins-eggs.d/exclude.list</string>
       </property>
       <property name="text">
-       <string>Addons</string>
+       <string>custom</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QComboBox" name="comboBoxAddons">
+     <widget class="QCheckBox" name="checkBoxHomes">
       <property name="toolTip">
-       <string>Select addons to insert</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QCheckBox" name="checkBoxPrefix">
-      <property name="toolTip">
-       <string>Prefix eg: egg-of_DISTRONAME-CODENAME-</string>
+       <string>Add exclude.list.homes to the /etc/penguins-eggs.d/exclude.list</string>
       </property>
       <property name="text">
-       <string>Prefix</string>
+       <string>homes</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEditPrefix">
+    <item row="0" column="2">
+     <widget class="QCheckBox" name="checkBoxUsr">
       <property name="toolTip">
-       <string>prefix</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QCheckBox" name="checkBoxBasename">
-      <property name="toolTip">
-       <string>Basename (usually hostname)</string>
+       <string>Add exclude.list.usr to the /etc/penguins-eggs.d/exclude.list</string>
       </property>
       <property name="text">
-       <string>Basename</string>
+       <string>usr</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEditBasename">
-      <property name="toolTip">
-       <string>basename</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="labelFilters">
-      <property name="toolTip">
-       <string>Filters are used to remove private or unnecessaries informations from the image, note exclude.list.template is always applied</string>
-      </property>
-      <property name="text">
-       <string>Filters</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QCheckBox" name="checkBoxCustom">
-        <property name="toolTip">
-         <string>Add exclude.list.custom to the /etc/penguins-eggs.d/exclude.list</string>
-        </property>
-        <property name="text">
-         <string>custom</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="checkBoxHomes">
-        <property name="toolTip">
-         <string>Add exclude.list.homes to the /etc/penguins-eggs.d/exclude.list</string>
-        </property>
-        <property name="text">
-         <string>homes</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QCheckBox" name="checkBoxUsr">
-        <property name="toolTip">
-         <string>Add exclude.list.usr to the /etc/penguins-eggs.d/exclude.list</string>
-        </property>
-        <property name="text">
-         <string>usr</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="labelCompression">
-      <property name="toolTip">
-       <string>You can choose from three types of compression: fast (default), standart and max</string>
-      </property>
-      <property name="text">
-       <string>Compression</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QComboBox" name="comboBoxCompression">
-      <property name="toolTip">
-       <string>Select compression</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="0">
-     <widget class="QLabel" name="labelTheme">
-      <property name="toolTip">
-       <string>Select the desired theme. To download themes: eggs wardrobe get</string>
-      </property>
-      <property name="text">
-       <string>Theme</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="1">
-     <widget class="QComboBox" name="comboBoxTheme">
-      <property name="toolTip">
-       <string>Select theme</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="0">
-     <widget class="QCheckBox" name="checkBoxClone">
-      <property name="toolTip">
-       <string>Performs a complete clone of the system by also copying users and their data</string>
-      </property>
-      <property name="text">
-       <string>Clone</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="0">
-     <widget class="QCheckBox" name="checkBoxCryptedClone">
-      <property name="toolTip">
-       <string>Performs a complete clone of the system by also copying the users and their data that will be encrypted in a LUKS volume inside the ISO </string>
-      </property>
-      <property name="text">
-       <string>Crypted Clone</string>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="0">
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>260</y>
+     <width>563</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
      <widget class="QCheckBox" name="checkBoxScript">
       <property name="toolTip">
        <string>It only creates the scripts necessary to create the ISO, but does not create it.</string>
@@ -291,7 +337,17 @@
       </property>
      </widget>
     </item>
-    <item row="9" column="0">
+    <item>
+     <widget class="QCheckBox" name="checkBoxClone">
+      <property name="toolTip">
+       <string>Performs a complete clone of the system by also copying users and their data</string>
+      </property>
+      <property name="text">
+       <string>Clone</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QCheckBox" name="checkBoxUnsecure">
       <property name="toolTip">
        <string>Selecting unsecure will also copy the data in /root to the ISO</string>
@@ -304,7 +360,17 @@
       </property>
      </widget>
     </item>
-    <item row="10" column="0">
+    <item>
+     <widget class="QCheckBox" name="checkBoxCryptedClone">
+      <property name="toolTip">
+       <string>Performs a complete clone of the system by also copying the users and their data that will be encrypted in a LUKS volume inside the ISO </string>
+      </property>
+      <property name="text">
+       <string>Crypted Clone</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QCheckBox" name="checkBoxYolk">
       <property name="toolTip">
        <string>Generates or regenerates a local repository /var/local/yolk to allow installation even in the absence of the Internet.</string>
