--- a/src/ui/config.ui
+++ b/src/ui/config.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,8 +19,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>640</width>
-    <height>480</height>
+    <width>1600</width>
+    <height>1200</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -42,8 +42,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>440</y>
+     <x>620</x>
+     <y>560</y>
      <width>171</width>
      <height>24</height>
     </rect>
@@ -55,10 +55,10 @@
   <widget class="QPushButton" name="pushButtonSave">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>230</y>
-     <width>171</width>
-     <height>61</height>
+     <x>300</x>
+     <y>420</y>
+     <width>121</width>
+     <height>111</height>
     </rect>
    </property>
    <property name="text">
@@ -68,10 +68,10 @@
   <widget class="QPushButton" name="pushButtonDiscard">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>230</y>
-     <width>83</width>
-     <height>61</height>
+     <x>160</x>
+     <y>420</y>
+     <width>131</width>
+     <height>111</height>
     </rect>
    </property>
    <property name="text">
@@ -81,10 +81,10 @@
   <widget class="QCheckBox" name="checkBoxMakeIsohybrid">
    <property name="geometry">
     <rect>
-     <x>1</x>
-     <y>220</y>
-     <width>85</width>
-     <height>22</height>
+     <x>-20</x>
+     <y>260</y>
+     <width>122</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -94,106 +94,13 @@
     <string>isohybrid</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_user_opt">
-   <property name="geometry">
-    <rect>
-     <x>1</x>
-     <y>118</y>
-     <width>100</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Live user name for live system/ISO image</string>
-   </property>
-   <property name="text">
-    <string>Live user name</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_snapshot_basename">
-   <property name="geometry">
-    <rect>
-     <x>1</x>
-     <y>84</y>
-     <width>69</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>volid of the ISO image</string>
-   </property>
-   <property name="text">
-    <string>Basename</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_user_opt_passwd">
-   <property name="geometry">
-    <rect>
-     <x>1</x>
-     <y>152</y>
-     <width>125</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Live user password for live system/ISO image</string>
-   </property>
-   <property name="text">
-    <string>Live user password</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_snapshot_dir">
-   <property name="geometry">
-    <rect>
-     <x>1</x>
-     <y>16</y>
-     <width>30</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>The place were we make eggs, usually /home/eggs</string>
-   </property>
-   <property name="text">
-    <string>Nest</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditRootPasswd">
-   <property name="geometry">
-    <rect>
-     <x>132</x>
-     <y>186</y>
-     <width>491</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>root password for live system/ISO image</string>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::PasswordEchoOnEdit</enum>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditUserOpt">
-   <property name="geometry">
-    <rect>
-     <x>132</x>
-     <y>118</y>
-     <width>491</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Live user name for live system/ISO image</string>
-   </property>
-  </widget>
   <widget class="QCheckBox" name="checkBoxMakeMd5sum">
    <property name="geometry">
     <rect>
-     <x>132</x>
-     <y>220</y>
-     <width>82</width>
-     <height>22</height>
+     <x>-10</x>
+     <y>300</y>
+     <width>245</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -203,105 +110,149 @@
     <string>md5sum</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEditSnapshotPrefix">
-   <property name="geometry">
-    <rect>
-     <x>132</x>
-     <y>50</y>
-     <width>491</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Prefix to be used with basenage to get ISO image filename</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditUserOptPasswd">
-   <property name="geometry">
-    <rect>
-     <x>132</x>
-     <y>152</y>
-     <width>491</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Live user password for live system/ISO image</string>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::PasswordEchoOnEdit</enum>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditSnapshotBasename">
-   <property name="geometry">
-    <rect>
-     <x>132</x>
-     <y>84</y>
-     <width>491</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>volid of the ISO image</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditSnapshotDir">
-   <property name="geometry">
-    <rect>
-     <x>132</x>
-     <y>16</y>
-     <width>491</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>The place were we make eggs, usually /home/eggs</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_root_passwd">
-   <property name="geometry">
-    <rect>
-     <x>1</x>
-     <y>186</y>
-     <width>123</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>root password for live system/ISO image</string>
-   </property>
-   <property name="text">
-    <string>Live root password</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_snashot_prefix">
-   <property name="geometry">
-    <rect>
-     <x>1</x>
-     <y>50</y>
-     <width>37</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="toolTip">
-    <string>Prefix to be used with basenage to get ISO image filename</string>
-   </property>
-   <property name="text">
-    <string>Prefix</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButtonHelp">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>230</y>
-     <width>83</width>
-     <height>61</height>
+     <x>30</x>
+     <y>420</y>
+     <width>121</width>
+     <height>111</height>
     </rect>
    </property>
    <property name="text">
     <string>&amp;Help</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>230</y>
+     <width>247</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout"/>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>1</x>
+     <y>16</y>
+     <width>771</width>
+     <height>230</height>
+    </rect>
+   </property>
+   <layout class="QFormLayout" name="formLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_snapshot_dir">
+      <property name="toolTip">
+       <string>The place were we make eggs, usually /home/eggs</string>
+      </property>
+      <property name="text">
+       <string>Nest</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="lineEditSnapshotDir">
+      <property name="toolTip">
+       <string>The place were we make eggs, usually /home/eggs</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_snashot_prefix">
+      <property name="toolTip">
+       <string>Prefix to be used with basenage to get ISO image filename</string>
+      </property>
+      <property name="text">
+       <string>Prefix</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="lineEditSnapshotPrefix">
+      <property name="toolTip">
+       <string>Prefix to be used with basenage to get ISO image filename</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_snapshot_basename">
+      <property name="toolTip">
+       <string>volid of the ISO image</string>
+      </property>
+      <property name="text">
+       <string>Basename</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="lineEditSnapshotBasename">
+      <property name="toolTip">
+       <string>volid of the ISO image</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_user_opt">
+      <property name="toolTip">
+       <string>Live user name for live system/ISO image</string>
+      </property>
+      <property name="text">
+       <string>Live user name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="lineEditUserOpt">
+      <property name="toolTip">
+       <string>Live user name for live system/ISO image</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_user_opt_passwd">
+      <property name="toolTip">
+       <string>Live user password for live system/ISO image</string>
+      </property>
+      <property name="text">
+       <string>Live user password</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLineEdit" name="lineEditUserOptPasswd">
+      <property name="toolTip">
+       <string>Live user password for live system/ISO image</string>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::PasswordEchoOnEdit</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_root_passwd">
+      <property name="toolTip">
+       <string>root password for live system/ISO image</string>
+      </property>
+      <property name="text">
+       <string>Live root password</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QLineEdit" name="lineEditRootPasswd">
+      <property name="toolTip">
+       <string>root password for live system/ISO image</string>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::PasswordEchoOnEdit</enum>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources>
