--- a/src/ui/pengui.ui
+++ b/src/ui/pengui.ui
@@ -17,24 +17,7 @@
    <iconset resource="resources.qrc">
     <normaloff>:/pengui/icons/pengui.svg</normaloff>:/pengui/icons/pengui.svg</iconset>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="labelLogo">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>50</y>
-      <width>1024</width>
-      <height>1024</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="resources.qrc">:/pengui/logo/penguin-dad-2.jpeg</pixmap>
-    </property>
-   </widget>
-  </widget>
+  <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -68,7 +51,6 @@
     </property>
     <addaction name="action_Configure"/>
     <addaction name="actionConfigureTools"/>
-    <addaction name="actionFormatUSB"/>
     <addaction name="actionGetEggs"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
