--- a/src/ui/config.ui
+++ b/src/ui/config.ui
@@ -27,7 +27,7 @@
    <string>Form</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset>
     <normaloff>:/pengui/icons/pengui.svg</normaloff>:/pengui/icons/pengui.svg</iconset>
   </property>
   <property name="toolTip">
@@ -42,40 +42,14 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>620</x>
+     <x>420</x>
      <y>560</y>
-     <width>171</width>
+     <width>371</width>
      <height>24</height>
     </rect>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButtonSave">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>420</y>
-     <width>121</width>
-     <height>111</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>&amp;Save</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButtonDiscard">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>420</y>
-     <width>131</width>
-     <height>111</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>&amp;Discard</string>
+    <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
    </property>
   </widget>
   <widget class="QCheckBox" name="checkBoxMakeIsohybrid">
@@ -108,19 +82,6 @@
    </property>
    <property name="text">
     <string>md5sum</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButtonHelp">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>420</y>
-     <width>121</width>
-     <height>111</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>&amp;Help</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
