pulite le icone occorrono nuove

--- a/src/ui/resources.qrc
+++ b/src/ui/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="pengui">
     <file>icons/pengui.svg</file>
+    <file>icons/egg.svg</file>
+    <file>icons/krill.svg</file>
   </qresource>
 </RCC>
